--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "serve": "webpack-dev-server"
+    "serve": "webpack-dev-server",
+    "vercel-build": "./vercel-build.sh"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
