--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pixi.js": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-virtuoso": "^4.1.0",
     "text-encoding": "^0.7.0"
   }
 }
