--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.74"
-gossip = { git = "https://github.com/EYHN/gossip.git", branch = "main" }
+gossip = { path = "./gossip" }
 getrandom = { version = "0.2", features = ["js"] }
 uuid = { version = "1.3.0", features = [ "v4" ] }
 serde-wasm-bindgen = "0.5.0"
