--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
     "@pixi/filter-outline": "^5.2.0",
     "@textea/json-viewer": "^2.15.0",
     "pixi.js": "^7.2.1",
